fixed minor bug with backspacing in the timer input

--- a/static/style.css
+++ b/static/style.css
@@ -292,6 +292,7 @@ tr {
     resize: none;
     padding-top: 5px;
     z-index: 1;
+    opacity: 0;
 }
 
 .timerDigits {
